# nimbus

./: .gitignore  README
gtk-engine/gtk-3.0/apps/: mate.css
icons/16x16/apps/: Makefile.am
icons/16x16/mimetypes/: Makefile.am
icons/24x24/apps/: Makefile.am
icons/24x24/mimetypes/: Makefile.am
icons/32x32/apps/: Makefile.am
icons/48x48/apps/: Makefile.am
icons/48x48/mimetypes/: Makefile.am
icons/96x96/mimetypes/: Makefile.am
metacity/: Makefile  Makefile.in  metacity-theme-1.xml
